--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.11.9"
+    "hono": "^4.11.9",
+    "mongoose": "^9.2.1"
   },
   "devDependencies": {
     "@types/bun": "latest"
